force-app/main/default/objects/Fee_Type__c/Fee_Type__c.object-meta.xml
<CustomObject>
    <label>Fee Type</label>
    <nameField>
        <label>Fee Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>