force-app/main/default/objects/Fee_Type__c/fields/Allow_User_Select__c.field-meta.xml
<CustomField>
    <fullName>Allow_User_Select__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can a user select this fee for a quote or contract?</description>
    <inlineHelpText>Can a user select this fee for a quote or contract?</inlineHelpText>
    <label>Allow User Select</label>
    <type>Checkbox</type>
</CustomField>