force-app/main/default/objects/Fee_Type__c/fields/Cost_Group__c.field-meta.xml
<CustomField>
    <fullName>Cost_Group__c</fullName>
    <description>what cost component does this fee roll up to?  Other = pass through</description>
    <inlineHelpText>what cost component does this fee roll up to?  Other = pass through</inlineHelpText>
    <label>Cost Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cost_Category</valueSetName>
    </valueSet>
</CustomField>